# openHiTLS-app-tls

codecs/include/: codec_local.h  codec_unified_local.h  encode_local.h
codecs/src/: codec.c  codec_chain.c  codec_unified.c  codec_unified_pool.c  decode.c  decode_chain.c  encode.c  encode_chain.c
codecs/test/: codec_unified_test.c
config/json/: feature.json
config/macro_config/: hitls_config_layer_crypto.h
crypto/codecskey/include/: crypt_codecskey_unified.h  crypt_encode_key_impl.h
crypto/codecskey/src/: crypt_codecskey_unified.c  crypt_encode_der2pem.c  crypt_encode_ecc.c  crypt_encode_key2der.c  crypt_encode_rsa.c
crypto/eal/src/: eal_pkey_method.c
crypto/lms/include/: crypt_hss.h  crypt_lms.h
crypto/lms/src/: hss.c  hss_impl.c  lmots.c  lms.c  lms_core.c  lms_local.h
crypto/lms_hss/include/: crypt_lms_hss.h
crypto/lms_hss/src/: hss_core.c  lmots_core.c  lms_core.c  lms_hss.c  lms_hss_hash.c  lms_hss_key.c  lms_hss_local.h  lms_hss_merkle.c  lms_hss_security.c
crypto/provider/include/: crypt_default_provderimpl.h
include/bsl/: bsl_obj.h
include/crypto/: crypt_algid.h  crypt_eal_codec_unified.h  crypt_eal_codecs.h  crypt_eal_codecs_unified.h  crypt_eal_implprovider.h  crypt_eal_pkey.h  crypt_errno.h  crypt_lms_hss.h  crypt_params_key.h  crypt_types.h
include/pki/: hitls_pki_types.h  hitls_pki_x509.h
pki/cms/include/: hitls_cms_local.h
testcode/: provider_encoder_test.c
testcode/demo/: CMakeLists.txt  lms_hss_demo.c
testcode/sdv/testcase/crypto/lms_hss/: CMakeLists.txt  test_suite_sdv_eal_lms_hss.c  test_suite_sdv_eal_lms_hss.data
(+14 files in other folders)
